--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/yumnakhtar/liri-node-app#readme",
   "dependencies": {
     "dotenv": "^5.0.1",
+    "inquirer": "^5.2.0",
     "node-spotify-api": "^1.0.7",
     "request": "^2.87.0",
     "spotify": "^0.3.0",
